Impl SSO authentication with frontend.